--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,55 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
+<!-- Display user login if authenticated..-->
     {% if user.is_authenticated %}
-        <h1>You are Welcome! </h1>
+
+        <!--Table header-->
+        <table class="table table-striped table-hover table-bordered table-responsive">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">State</th>
+                <th scope="col">Zipcode</th>
+                <th scope="col">Created_at</th>
+              </tr>
+            </thead>
+            <tbody>
+                
+                <!--Table body-->
+                <!-- Grab everything in database table and display here.. -->
+            {% if records %}
+
+                {% for record in records %}
+                    <tr>
+                        <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
+                        <td>{{ record.firstname }} {{ record.lastname }}</td>
+                        <td>{{ record.email }}</td>
+                        <td>{{ record.phone }}</td>
+                        <td>{{ record.address }}</td>
+                        <td>{{ record.city }}</td>
+                        <td>{{ record.state }}</td>
+                        <td>{{ record.zipcode }}</td>
+                        <td>{{ record.created_at }}</td>
+                    </tr>
+                {% endfor %}
+
+            {% endif %}
+
+                <!--Table body ends-->
+
+            </tbody>
+          </table>
+        <!--Table header ends-->  
+    
+
     {% else %}
-    <br/>
+    <div class="col-md-6 offset-md-3"> 
     <h1>Login</h1>
     <br/>
     <form method="POST" action="{% url 'index' %}">
@@ -26,6 +70,7 @@
         </form>
     </form>
 </div>
+
 {% endif %}
 
 {% endblock %}
